Added hidden section for RR uploading, and changed alignment

--- a/AP.html
+++ b/AP.html
@@ -101,8 +101,8 @@
                     <p class="text-dark lead">The Advisory Panel acts to aid the security council and advise them before their final verdict. This council is open to KS4/5 students.
 						<br>The chairs for this council are; Julia Kim and Erik Chen.<br>
 						<br>The topics for this committee are;<br>
-							<li>The question of humanitarian exemptions on the sanction regime of the DPRK</li>
-                        		<li>Rebuilding infrastructure damaged as a result of the Libyan Civil War</li>
+				            <li>The question of humanitarian exemptions on the sanction regime of the DPRK</li>
+                        	<li>Rebuilding infrastructure damaged as a result of the Libyan Civil War</li>
 					</p>
 				</div>
             </div>
@@ -124,6 +124,13 @@
                 <p align="center">
 				<br><br><br><br><br>
 				     Research reports will be uploaded as soon as they come in.
+                    <!----
+                    <br>
+                        <strong>Click to download the following research reports;</strong>
+                        <a href="">The question of humanitarian exemptions on the sanction regime of the DPRK</a>
+                        <a href="">Rebuilding infrastructure damaged as a result of the Libyan Civil War</a>
+				    <br>
+                    -->
 				</p>
             </div>
             <div class="col-md-4">
