--- a/DIS.html
+++ b/DIS.html
@@ -102,9 +102,9 @@
 						<br>The chairs for this council are; Sean Choi and Guan Rong Tan.<br>
 						<br>The topics for this committee are;<br>
 							<li>Preventing the militarization of outer space</li>
-                        		<li>Addressing the issue of biological weapons in warfare</li>
-                        		<li>Facilitating the aftermath of the Syrian civil war</li>
-                        		<li>Providing a resolution for the possibility of a nuclear crisis</li>
+                        	<li>Addressing the issue of biological weapons in warfare</li>
+                        	<li>Facilitating the aftermath of the Syrian civil war</li>
+                        	<li>Providing a resolution for the possibility of a nuclear crisis</li>
 					</p>
 				</div>
             </div>
@@ -126,6 +126,15 @@
                 <p align="center">
 				<br><br><br><br><br>
 				     Research reports will be uploaded as soon as they come in.
+                    <!----
+                    <br>
+                        <strong>Click to download the following research reports;</strong>
+                        <a href="">Preventing the militarization of outer space</a>
+                        <a href="">Addressing the issue of biological weapons in warfare</a>
+                        <a href="">Facilitating the aftermath of the Syrian civil war</a>
+                        <a href="">Providing a resolution for the possibility of a nuclear crisis</a>
+				    <br>
+                    -->
 				</p>
             </div>
             <div class="col-md-4">
