--- a/ECOSOC.html
+++ b/ECOSOC.html
@@ -102,9 +102,9 @@
 						<br>The chairs for this council are; Jaewon Choi and Seung Yon Kim.<br>
 						<br>The topics for this committee are;<br>
 							<li>Addressing the issue of urban slums in South America</li>
-                        		<li>Improving infrastructure for technological growth in developing African economies</li>
-                        		<li>Addressing the economic crisis in Venezuela</li>
-                        		<li>Addressing the role of the internet in international crime</li>
+                        	<li>Improving infrastructure for technological growth in developing African economies</li>
+                        	<li>Addressing the economic crisis in Venezuela</li>
+                        	<li>Addressing the role of the internet in international crime</li>
 					</p>
 				</div>
             </div>
@@ -126,7 +126,16 @@
                 <p align="center">
 				<br><br><br><br><br>
 				     Research reports will be uploaded as soon as they come in.
-				</p>
+				    <!----
+                    <br>
+                        <strong>Click to download the following research reports;</strong>
+                        <a href="">Addressing the issue of urban slums in South America</a>
+                        <a href="">Improving infrastructure for technological growth in developing African economies</a>
+                        <a href="">Addressing the economic crisis in Venezuela</a>
+                        <a href="">Addressing the role of the internet in international crime</a>
+				    <br>
+                    -->
+                </p>
             </div>
             <div class="col-md-4">
                 <div class="container-com">
