--- a/ENV.html
+++ b/ENV.html
@@ -102,9 +102,9 @@
 						<br>The chairs for this council are; Ellie Green and Leighton DuYang.<br>
 						<br>The topics for this committee are;<br>
 							<li>Preventing the acceleration of climate change</li>
-                        		<li>Measures to restore environments damaged by man-made disasters in the Caribbean</li>
-                        		<li>Combating desertification in Sub-Saharan Africa</li>
-                        		<li>Sustainable urban planning in rapidly developing countries</li>
+                        	<li>Measures to restore environments damaged by man-made disasters in the Caribbean</li>
+                        	<li>Combating desertification in Sub-Saharan Africa</li>
+                        	<li>Sustainable urban planning in rapidly developing countries</li>
 					</p>
 				</div>
             </div>
@@ -126,6 +126,15 @@
                 <p align="center">
 				<br><br><br><br><br>
 				     Research reports will be uploaded as soon as they come in.
+                    <!----
+                    <br>
+                        <strong>Click to download the following research reports;</strong>
+                        <a href="">Preventing the acceleration of climate change</a>
+                        <a href="">Measures to restore environments damaged by man-made disasters in the Caribbean</a>
+                        <a href="">Combating desertification in Sub-Saharan Africa</a>
+                        <a href="">Sustainable urban planning in rapidly developing countries</a>
+				    <br>
+                    -->
 				</p>
             </div>
             <div class="col-md-4">
