--- a/HRC.html
+++ b/HRC.html
@@ -102,9 +102,9 @@
 						<br>The chairs for this council are; Heather Leung and Joy Ryu.<br>
 						<br>The topics for this committee are;<br>
 							<li>Measures to protect the movement of refugees</li>
-                        		<li>Measures to combat international human trafficking</li>
-                        		<li>Addressing the issue of child labourers in Asia</li>
-                        		<li>Measures to rehabilitate internally displaced persons</li>
+                        	<li>Measures to combat international human trafficking</li>
+                        	<li>Addressing the issue of child labourers in Asia</li>
+                        	<li>Measures to rehabilitate internally displaced persons</li>
 					</p>
 				</div>
             </div>
@@ -126,6 +126,15 @@
                 <p align="center">
 				<br><br><br><br><br>
 				     Research reports will be uploaded as soon as they come in.
+                    <!----
+                    <br>
+                        <strong>Click to download the following research reports;</strong>
+                        <a href="">Measures to protect the movement of refugees</a>
+                        <a href="">Measures to combat international human trafficking</a>
+                        <a href="">Addressing the issue of child labourers in Asia</a>
+                        <a href="">Measures to rehabilitate internally displaced persons</a>
+				    <br>
+                    -->
 				</p>
             </div>
             <div class="col-md-4">
