--- a/SC.html
+++ b/SC.html
@@ -102,8 +102,8 @@
 						<br>The chairs for this council are; Si In Park and Eric Choi.<br>
 						<br>The topics for this committee are;<br>
 							<li>The regulation of international arms corporations</li>
-                        		<li>De-escalation of nuclear armament in the DPRK</li>
-                        		<li>Measures to reduce the armament of paramilitary forces in the Libyan Civil War</li>
+                        	<li>De-escalation of nuclear armament in the DPRK</li>
+                        	<li>Measures to reduce the armament of paramilitary forces in the Libyan Civil War</li>
 					</p>
 				</div>
             </div>
@@ -125,6 +125,14 @@
                 <p align="center">
 				<br><br><br><br><br>
 				     Research reports will be uploaded as soon as they come in.
+                    <!----
+                    <br>
+                        <strong>Click to download the following research reports;</strong>
+                        <a href="">The regulation of international arms corporations</a>
+                        <a href="">De-escalation of nuclear armament in the DPRK</a>
+                        <a href="">Measures to reduce the armament of paramilitary forces in the Libyan Civil War</a>
+				    <br>
+                    -->
 				</p>
             </div>
             <div class="col-md-4">
