--- a/SPC.html
+++ b/SPC.html
@@ -101,10 +101,10 @@
                     <p class="text-dark lead">The Special Conference on Non-State Actors seeks to address the issue of non-UN, non-state actors to help resolve conflict, tensions and promote diplomatic dialogue.
 						<br>The chairs for this council are; Su Lee and Ashley Zhou.<br>
 						<br>The topics for this committee are;<br>
-							<li>Measures to improve recognition of Kurdish minorities in the Middle East </li>
-                        		<li>Measures to facilitate peace discussion with remaining ISIS groups in Syria</li>
-                        		<li>Measures to reduce violence from drug cartels in Mexico </li>
-                        		<li>Preventing the distribution of counterfeit medicine</li>
+							<li>Measures to improve recognition of Kurdish minorities in the Middle East</li>
+                        	<li>Measures to facilitate peace discussion with remaining ISIS groups in Syria</li>
+                        	<li>Measures to reduce violence from drug cartels in Mexico</li>
+                        	<li>Preventing the distribution of counterfeit medicine</li>
 					</p>
 				</div>
             </div>
@@ -126,6 +126,15 @@
                 <p align="center">
 				<br><br><br><br><br>
 				     Research reports will be uploaded as soon as they come in.
+                    <!----
+                    <br>
+                        <strong>Click to download the following research reports;</strong>
+                        <a href="">Measures to improve recognition of Kurdish minorities in the Middle East</a>
+                        <a href="">Measures to facilitate peace discussion with remaining ISIS groups in Syria</a>
+                        <a href="">Measures to reduce violence from drug cartels in Mexico</a>
+                        <a href="">Preventing the distribution of counterfeit medicine</a>
+				    <br>
+                    -->
 				</p>
             </div>
             <div class="col-md-4">
