--- a/GA2.html
+++ b/GA2.html
@@ -102,9 +102,9 @@
 						<br>The chairs for this council are; Ethan Hou and Elina Du.<br>
 						<br>The topics for this committee are;<br>
 							<li>Measures to prevent the spread of mosquito-borne diseases</li>
-                        		<li>Measures to aid the transition to renewable energy in developing East Asian nations</li>
-                        		<li>Protecting the rights of non-combatant individuals in in the Yemeni Civil War</li>
-                        		<li>Measures to recover radiation contaminated zones</li>
+                        	<li>Measures to aid the transition to renewable energy in developing East Asian nations</li>
+                        	<li>Protecting the rights of non-combatant individuals in in the Yemeni Civil War</li>
+                        	<li>Measures to recover radiation contaminated zones</li>
 					</p>
 				</div>
             </div>
@@ -126,6 +126,15 @@
                 <p align="center">
 				<br><br><br><br><br>
 				     Research reports will be uploaded as soon as they come in.
+                    <!----
+                    <br>
+                        <strong>Click to download the following research reports;</strong>
+                        <a href="">Measures to prevent the spread of mosquito-borne diseases</a>
+                        <a href="">Measures to aid the transition to renewable energy in developing East Asian nations</a>
+                        <a href="">Protecting the rights of non-combatant individuals in in the Yemeni Civil War</a>
+                        <a href="">Measures to recover radiation contaminated zones</a>
+				    <br>
+                    -->
 				</p>
             </div>
             <div class="col-md-4">
