--- a/AP.html
+++ b/AP.html
@@ -126,9 +126,9 @@
 				     Research reports will be uploaded as soon as they come in.
                     <!----
                     <br>
-                        <strong>Click to download the following research reports;</strong>
-                        <a href="">The question of humanitarian exemptions on the sanction regime of the DPRK</a>
-                        <a href="">Rebuilding infrastructure damaged as a result of the Libyan Civil War</a>
+                        <strong>Click to download the following research reports;</strong><br>
+                        <a href="">The question of humanitarian exemptions on the sanction regime of the DPRK</a><br>
+                        <a href="">Rebuilding infrastructure damaged as a result of the Libyan Civil War</a><br>
 				    <br>
                     -->
 				</p>
