--- a/DIS.html
+++ b/DIS.html
@@ -128,11 +128,11 @@
 				     Research reports will be uploaded as soon as they come in.
                     <!----
                     <br>
-                        <strong>Click to download the following research reports;</strong>
-                        <a href="">Preventing the militarization of outer space</a>
-                        <a href="">Addressing the issue of biological weapons in warfare</a>
-                        <a href="">Facilitating the aftermath of the Syrian civil war</a>
-                        <a href="">Providing a resolution for the possibility of a nuclear crisis</a>
+                        <strong>Click to download the following research reports;</strong><br>
+                        <a href="">Preventing the militarization of outer space</a><br>
+                        <a href="">Addressing the issue of biological weapons in warfare</a><br>
+                        <a href="">Facilitating the aftermath of the Syrian civil war</a><br>
+                        <a href="">Providing a resolution for the possibility of a nuclear crisis</a><br>
 				    <br>
                     -->
 				</p>
