--- a/ECOSOC.html
+++ b/ECOSOC.html
@@ -128,11 +128,11 @@
 				     Research reports will be uploaded as soon as they come in.
 				    <!----
                     <br>
-                        <strong>Click to download the following research reports;</strong>
-                        <a href="">Addressing the issue of urban slums in South America</a>
-                        <a href="">Improving infrastructure for technological growth in developing African economies</a>
-                        <a href="">Addressing the economic crisis in Venezuela</a>
-                        <a href="">Addressing the role of the internet in international crime</a>
+                        <strong>Click to download the following research reports;</strong><br>
+                        <a href="">Addressing the issue of urban slums in South America</a><br>
+                        <a href="">Improving infrastructure for technological growth in developing African economies</a><br>
+                        <a href="">Addressing the economic crisis in Venezuela</a><br>
+                        <a href="">Addressing the role of the internet in international crime</a><br>
 				    <br>
                     -->
                 </p>
