--- a/ENV.html
+++ b/ENV.html
@@ -128,11 +128,11 @@
 				     Research reports will be uploaded as soon as they come in.
                     <!----
                     <br>
-                        <strong>Click to download the following research reports;</strong>
-                        <a href="">Preventing the acceleration of climate change</a>
-                        <a href="">Measures to restore environments damaged by man-made disasters in the Caribbean</a>
-                        <a href="">Combating desertification in Sub-Saharan Africa</a>
-                        <a href="">Sustainable urban planning in rapidly developing countries</a>
+                        <strong>Click to download the following research reports;</strong><br>
+                        <a href="">Preventing the acceleration of climate change</a><br>
+                        <a href="">Measures to restore environments damaged by man-made disasters in the Caribbean</a><br>
+                        <a href="">Combating desertification in Sub-Saharan Africa</a><br>
+                        <a href="">Sustainable urban planning in rapidly developing countries</a><br>
 				    <br>
                     -->
 				</p>
