--- a/GA1.html
+++ b/GA1.html
@@ -128,11 +128,11 @@
 				     Research reports will be uploaded as soon as they come in.
                     <!----
                     <br>
-                        <strong>Click to download the following research reports;</strong>
-                        <a href="">Combating the spread of diseases in South-East Asia</a>
-                        <a href="">Addressing the misconduct of UN peacekeepers</a>
-                        <a href="">Improving access to clean water and medical infrastructure in Afghanistan</a>
-                        <a href="">Ensuring voting security in transitional countries in the Balkan region</a>
+                        <strong>Click to download the following research reports;</strong><br>
+                        <a href="">Combating the spread of diseases in South-East Asia</a><br>
+                        <a href="">Addressing the misconduct of UN peacekeepers</a><br>
+                        <a href="">Improving access to clean water and medical infrastructure in Afghanistan</a><br>
+                        <a href="">Ensuring voting security in transitional countries in the Balkan region</a><br>
 				    <br>
                     -->
 				</p>
