--- a/GA2.html
+++ b/GA2.html
@@ -128,11 +128,11 @@
 				     Research reports will be uploaded as soon as they come in.
                     <!----
                     <br>
-                        <strong>Click to download the following research reports;</strong>
-                        <a href="">Measures to prevent the spread of mosquito-borne diseases</a>
-                        <a href="">Measures to aid the transition to renewable energy in developing East Asian nations</a>
-                        <a href="">Protecting the rights of non-combatant individuals in in the Yemeni Civil War</a>
-                        <a href="">Measures to recover radiation contaminated zones</a>
+                        <strong>Click to download the following research reports;</strong><br>
+                        <a href="">Measures to prevent the spread of mosquito-borne diseases</a><br>
+                        <a href="">Measures to aid the transition to renewable energy in developing East Asian nations</a><br>
+                        <a href="">Protecting the rights of non-combatant individuals in in the Yemeni Civil War</a><br>
+                        <a href="">Measures to recover radiation contaminated zones</a><br>
 				    <br>
                     -->
 				</p>
