--- a/SC.html
+++ b/SC.html
@@ -127,10 +127,10 @@
 				     Research reports will be uploaded as soon as they come in.
                     <!----
                     <br>
-                        <strong>Click to download the following research reports;</strong>
-                        <a href="">The regulation of international arms corporations</a>
-                        <a href="">De-escalation of nuclear armament in the DPRK</a>
-                        <a href="">Measures to reduce the armament of paramilitary forces in the Libyan Civil War</a>
+                        <strong>Click to download the following research reports;</strong><br>
+                        <a href="">The regulation of international arms corporations</a><br>
+                        <a href="">De-escalation of nuclear armament in the DPRK</a><br>
+                        <a href="">Measures to reduce the armament of paramilitary forces in the Libyan Civil War</a><br>
 				    <br>
                     -->
 				</p>
