--- a/SPC.html
+++ b/SPC.html
@@ -128,11 +128,11 @@
 				     Research reports will be uploaded as soon as they come in.
                     <!----
                     <br>
-                        <strong>Click to download the following research reports;</strong>
-                        <a href="">Measures to improve recognition of Kurdish minorities in the Middle East</a>
-                        <a href="">Measures to facilitate peace discussion with remaining ISIS groups in Syria</a>
-                        <a href="">Measures to reduce violence from drug cartels in Mexico</a>
-                        <a href="">Preventing the distribution of counterfeit medicine</a>
+                        <strong>Click to download the following research reports;</strong><br>
+                        <a href="">Measures to improve recognition of Kurdish minorities in the Middle East</a><br>
+                        <a href="">Measures to facilitate peace discussion with remaining ISIS groups in Syria</a><br>
+                        <a href="">Measures to reduce violence from drug cartels in Mexico</a><br>
+                        <a href="">Preventing the distribution of counterfeit medicine</a><br>
 				    <br>
                     -->
 				</p>
