--- a/HRC.html
+++ b/HRC.html
@@ -128,11 +128,11 @@
 				     Research reports will be uploaded as soon as they come in.
                     <!----
                     <br>
-                        <strong>Click to download the following research reports;</strong>
-                        <a href="">Measures to protect the movement of refugees</a>
-                        <a href="">Measures to combat international human trafficking</a>
-                        <a href="">Addressing the issue of child labourers in Asia</a>
-                        <a href="">Measures to rehabilitate internally displaced persons</a>
+                        <strong>Click to download the following research reports;</strong><br>
+                        <a href="">Measures to protect the movement of refugees</a><br>
+                        <a href="">Measures to combat international human trafficking</a><br>
+                        <a href="">Addressing the issue of child labourers in Asia</a><br>
+                        <a href="">Measures to rehabilitate internally displaced persons</a><br>
 				    <br>
                     -->
 				</p>
