--- a/DIS.html
+++ b/DIS.html
@@ -139,7 +139,7 @@
             </div>
             <div class="col-md-4">
                 <div class="container-com">
-                    <img src="img/img-person-placeholder.jpg" alt="" class="image">
+                    <img src="img/Guan Rong.jpeg" alt="" class="image">
                     <div class="overlay">
                         <div class="text-com">Guan Rong Tan</div>
                     </div>
