--- a/accommodation.html
+++ b/accommodation.html
@@ -108,7 +108,7 @@
                 <br>
                 <div class="row">
                     <div class="col-md-5">
-                        <h2>Citic Hotel</h2>
+                        <h2>CITIC Hotel</h2>
                         <p>Located just a few minutes from the Beijing Capital Airport, the hotel offers free airport shuttle, city and exhibition shuttle services. Guests have access to a recreation centre, an indoor and outdoor pool, and several international restaurants and casual cafes.
                         <hr>
                         Location: No.9 Xiao Tianzhu Road, Capital International Airport, Beijing, China, 100621</p>
