Chair reports upload_1

--- a/DIS.html
+++ b/DIS.html
@@ -124,17 +124,13 @@
             </div>
             <div class="col-md-4">
                 <p align="center">
-				<br><br><br><br><br>
-				     Research reports will be uploaded as soon as they come in.
-                    <!----
-                    <br>
-                        <strong>Click to download the following research reports;</strong><br>
-                        <a href="">Preventing the militarization of outer space</a><br>
-                        <a href="">Addressing the issue of biological weapons in warfare</a><br>
-                        <a href="">Facilitating the aftermath of the Syrian civil war</a><br>
-                        <a href="">Providing a resolution for the possibility of a nuclear crisis</a><br>
+				<br><br>
+                        <strong>Click to download research reports for...</strong><br>
+                        Topic 1<br>
+                        Topic 2<br>
+                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/DIS/Facilitating%20the%20aftermath%20of%20the%20Syrian%20civil%20war.pdf">Topic 3</a><br>
+                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/DIS/Providing%20a%20resolution%20for%20a%20possible%20nuclear%20crisis.pdf">Topic 4</a><br>
 				    <br>
-                    -->
 				</p>
             </div>
             <div class="col-md-4">
