--- a/GA1.html
+++ b/GA1.html
@@ -124,18 +124,15 @@
             </div>
             <div class="col-md-4">
                 <p align="center">
-				<br><br><br><br><br>
-				     Research reports will be uploaded as soon as they come in.
-                    <!----
+				<br><br><br>
                     <br>
-                        <strong>Click to download the following research reports;</strong><br>
-                        <a href="">Combating the spread of diseases in South-East Asia</a><br>
-                        <a href="">Addressing the misconduct of UN peacekeepers</a><br>
-                        <a href="">Improving access to clean water and medical infrastructure in Afghanistan</a><br>
-                        <a href="">Ensuring voting security in transitional countries in the Balkan region</a><br>
+                        <strong>Click to download research reports for...</strong><br>
+                        Topic 1<br>
+                        Topic 2<br>
+                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/GA1/Improving%20access%20to%20clean%20water%20and%20medical%20infrastructure%20in%20Afghanistan.pdf">Topic 3</a><br>
+                        Topic 4<br>
 				    <br>
-                    -->
-				</p>
+                </p>
             </div>
             <div class="col-md-4">
                 <div class="container-com">
