Added hover text for title

--- a/DIS.html
+++ b/DIS.html
@@ -128,8 +128,8 @@
                         <strong>Click to download research reports for...</strong><br>
                         Topic 1<br>
                         Topic 2<br>
-                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/DIS/Facilitating%20the%20aftermath%20of%20the%20Syrian%20civil%20war.pdf">Topic 3</a><br>
-                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/DIS/Providing%20a%20resolution%20for%20a%20possible%20nuclear%20crisis.pdf">Topic 4</a><br>
+                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/DIS/Facilitating%20the%20aftermath%20of%20the%20Syrian%20civil%20war.pdf", title="Facilitating the aftermath of the Syrian civil war">Topic 3</a><br>
+                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/DIS/Providing%20a%20resolution%20for%20a%20possible%20nuclear%20crisis.pdf", title="Providing a resolution for the possibility of a nuclear crisis">Topic 4</a><br>
 				    <br>
 				</p>
             </div>
