--- a/GA1.html
+++ b/GA1.html
@@ -101,10 +101,10 @@
                     <p class="text-dark lead">General assembly consists of all members states and engages in a variety of issues raised by the member states.
 						<br>The chairs for this council are; Yulim Koo and Mina Xiao.<br>
 						<br>The topics for this committee are;<br>
-							<li>Combating the spread of diseases in South-East Asia</li>
-                        		<li>Addressing the misconduct of UN peacekeepers</li>
-                        		<li>Improving access to clean water and medical infrastructure in Afghanistan</li>
-                        		<li>Ensuring voting security in transitional countries in the Balkan region</li>
+                            <li>Combating the spread of diseases in South-East Asia</li>
+                            <li>Addressing the misconduct of UN peacekeepers</li>
+                            <li>Improving access to clean water and medical infrastructure in Afghanistan</li>
+                            <li>Ensuring voting security in transitional countries in the Balkan region</li>
 					</p>
 				</div>
             </div>
@@ -129,7 +129,7 @@
                         <strong>Click to download research reports for...</strong><br>
                         Topic 1<br>
                         Topic 2<br>
-                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/GA1/Improving%20access%20to%20clean%20water%20and%20medical%20infrastructure%20in%20Afghanistan.pdf">Topic 3</a><br>
+                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/GA1/Improving%20access%20to%20clean%20water%20and%20medical%20infrastructure%20in%20Afghanistan.pdf", title="Improving access to clean water and medical infrastructure in Afghanistan">Topic 3</a><br>
                         Topic 4<br>
 				    <br>
                 </p>
