Chair report upload_3

--- a/AP.html
+++ b/AP.html
@@ -122,13 +122,11 @@
             </div>
             <div class="col-md-4">
                 <p align="center">
-				<br><br><br><br><br>
-				     Research reports will be uploaded as soon as they come in.
-                    <!----
+				<br><br><br>
                     <br>
-                        <strong>Click to download the following research reports;</strong><br>
-                        <a href="">The question of humanitarian exemptions on the sanction regime of the DPRK</a><br>
-                        <a href="">Rebuilding infrastructure damaged as a result of the Libyan Civil War</a><br>
+                        <strong>Click to download research reports for...</strong><br>
+                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/AP/The%20question%20of%20humanitarian%20exemptions%20on%20the%20sanction%20regimes%20of%20the%20DPRK.pdf", title="The question of humanitarian exemptions on the sanction regime of the DPRK">Topic 1</a><br>
+                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/AP/Rebuilding%20infrastructure%20damaged%20as%20a%20result%20of%20the%20Libyan%20Civil%20War.pdf", title="Rebuilding infrastructure damaged as a result of the Libyan Civil War">Topic 2</a><br>
 				    <br>
                     -->
 				</p>
