--- a/GA2.html
+++ b/GA2.html
@@ -124,17 +124,14 @@
             </div>
             <div class="col-md-4">
                 <p align="center">
-				<br><br><br><br><br>
-				     Research reports will be uploaded as soon as they come in.
-                    <!----
+				<br><br><br>
                     <br>
-                        <strong>Click to download the following research reports;</strong><br>
-                        <a href="">Measures to prevent the spread of mosquito-borne diseases</a><br>
-                        <a href="">Measures to aid the transition to renewable energy in developing East Asian nations</a><br>
-                        <a href="">Protecting the rights of non-combatant individuals in in the Yemeni Civil War</a><br>
-                        <a href="">Measures to recover radiation contaminated zones</a><br>
+                        <strong>Click to download research reports for...</strong><br>
+                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/GA2/Measures%20to%20prevent%20the%20spread%20of%20mosquito-borne%20diseases.pdf", title="Measures to prevent the spread of mosquito-borne diseases">Topic 1</a><br>
+                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/GA2/Measures%20to%20aid%20the%20transition%20to%20renewable%20energy%20in%20developing%20East%20Asian%20nations.pdf", topic="Measures to aid the transition to renewable energy in developing East Asian nations">Topic 2</a><br>
+                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/GA2/Protecting%20the%20right%20of%20non-combatant%20individuals%20in%20the%20Yemeni%20Civil%20War.pdf", title="Protecting the rights of non-combatant individuals in in the Yemeni Civil War">Topic 3</a><br>
+                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/GA2/Measures%20to%20recover%20radiation%20contaminated%20zones.pdf", topic="Measures to recover radiation contaminated zones">Topic 3</a><br>
 				    <br>
-                    -->
 				</p>
             </div>
             <div class="col-md-4">
