--- a/SPC.html
+++ b/SPC.html
@@ -124,17 +124,14 @@
             </div>
             <div class="col-md-4">
                 <p align="center">
-				<br><br><br><br><br>
-				     Research reports will be uploaded as soon as they come in.
-                    <!----
+				<br><br><br>
                     <br>
-                        <strong>Click to download the following research reports;</strong><br>
-                        <a href="">Measures to improve recognition of Kurdish minorities in the Middle East</a><br>
-                        <a href="">Measures to facilitate peace discussion with remaining ISIS groups in Syria</a><br>
-                        <a href="">Measures to reduce violence from drug cartels in Mexico</a><br>
-                        <a href="">Preventing the distribution of counterfeit medicine</a><br>
+                        <strong>Click to download research reports for...</strong><br>
+                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/SPC/Measures%20to%20improve%20recognition%20of%20Kurdish%20minorities%20in%20the%20Middle%20East.pdf", title="Measures to improve recognition of Kurdish minorities in the Middle East">Topic 1</a><br>
+                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/SPC/Measures%20to%20facilitate%20peace%20discussion%20with%20remaining%20ISIS%20groups%20in%20Syria.pdf", title="Measures to facilitate peace discussion with remaining ISIS groups in Syria"></a>Topic 2<br>
+                        Topic 3<br>
+                        <a href="https://github.com/dadimun/pdfs/raw/master/Chair%20Reports/SPC/Preventing%20the%20distribution%20of%20counterfeit%20medicine.pdf", title="Preventing the distribution of counterfeit medicine">Topic 4</a><br>
 				    <br>
-                    -->
 				</p>
             </div>
             <div class="col-md-4">
