--- a/GA2.html
+++ b/GA2.html
@@ -136,7 +136,7 @@
             </div>
             <div class="col-md-4">
                 <div class="container-com">
-                    <img src="img/img-person-placeholder.jpg" alt="" class="image">
+                    <img src="img/Elina Du.jpg" alt="" class="image">
                     <div class="overlay">
                         <div class="text-com">Elina Du</div>
                     </div>
